--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,10 @@
-language: cpp
-
-before_script:
-  - chmod +x cbp2make
-
+language: python
+python:
+  - "3.8-dev"  # 3.8 development branch
+install:
+  - pip install -r requirements.txt
+  - pip install opencv-python
+  - pip install schedule
+# command to run tests
 script:
-  - ./cbp2make -in BaseProject.cbp -out Makefile
-  - make
-  - bin/Test/BaseProject
-
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
+  - pytest
